apps/external-secrets/templates/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: bitwarden-sdk-server
  namespace: external-secrets

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-sdk-server
      app.kubernetes.io/instance: external-secrets
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: external-secrets
              app.kubernetes.io/instance: external-secrets
      ports:
        - protocol: TCP
          port: 9998
